Added forms to pages app and edit in index views them added forms in html code and added bootstrap and added security csrf_token and added message wehn user added book and added in view index to save data

--- a/templates/parts/sidebar.html
+++ b/templates/parts/sidebar.html
@@ -12,7 +12,7 @@
         <div class="image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Yahya Ahmed</a>
+          <a href="/" class="d-block">Yahya Ahmed</a>
         </div>
       </div>
 
